Fix on Alignment with Differnet Browser

--- a/style.css
+++ b/style.css
@@ -298,8 +298,10 @@ section.filter {
     appearance: none;
 
     height: 2rem;
-    padding: 0rem .25rem;
+    padding: 0rem .65rem 0rem .5rem;
     border: none;
+
+    /* text-align: center; */
 
     border-radius: 5px;
 
@@ -314,6 +316,7 @@ section.filter {
 
 option {
     font-size: .8rem;
+    /* padding: 0rem; */
     color: var(--color-brown-dark);
 }
 
